<resources>
    <string name="app_name">Datanno</string>

    <string name="title_bar_back">返回</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>

    <!---->
    <string name="app_system_anguage">系统语言切换成功 请退出App重新进去</string>


    <!-- dialog -->
    <string name="dialog_common_title_text">温馨提示</string>
    <string name="dialog_common_button_sure">确定</string>
    <string name="dialog_common_button_cancle">取消</string>
    <string name="dialog_choose_picture_button_camera">拍照</string>
    <string name="dialog_choose_picture_button_album">从手机相册选择</string>
    <string name="dialog_content_quit_system">您确认退出应用吗？</string>


    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- login and register -->
    <string name="login_activity_title">登录</string>
    <string name="login_activity_account">帐号</string>
    <string name="login_activity_pwd">密码</string>
    <string name="login_activity_button_login">登录</string>
    <string name="login_activity_button_register">注册</string>
    <string name="login_activity_china_en">中文/EN</string>

    <string name="register_activity_title">注册</string>
    <string name="register_activity_button">注册</string>

    <string name="login_activity_toast_failed_freeze">登录失败！</string>
    <string name="login_activity_edittext_username">请输入您的手机号</string>
    <string name="login_activity_edittext_pwd">请输入您的登录密码</string>
    <string name="login_activity_text_forget_pwd">忘记密码?</string>

</resources>
